Trying different ways to fix visibility issue on phone for help command

--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ html, body {
 .output {
     flex-grow: 1;
     overflow-y: auto; /* Scrollable content */
+    padding: 10%;
 }
 
 /* Also hide scrollbars on the output element */
